# aleph-alpha-api-rs

./: Cargo.toml  LICENSE  README.md
examples/: lumigen.rs  print_completion.rs  sampling_control.json  sampling_default.json  sampling_report.rs
examples/config/: sampling_control.json
src/: client.rs  completion.rs  embedding.rs  error.rs  explanation.rs  http.rs  lib.rs  tokenization.rs
src/v1/: api_tokens.rs  client.rs  completion.rs  embedding.rs  evaluate.rs  explanation.rs  image_processing.rs  mod.rs  users.rs
tests/: integration.rs
tests/v1/: integration.rs
