[package]
name = "aleph-alpha-api-rs"
version = "0.1.0"
edition = "2021"
description = "Interact with large language models provided by the Aleph Alpha API in Rust code"
license = "MIT"
keywords = ["ai", "aleph-alpha", "llm"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
tokio = { version = "1.34.0", features = ["rt", "macros"] }
